feat: Implement Advanced Token Management for Spring and MicroProfile
This PR implements comprehensive Hedera Token Service (HTS) management capabilities across both Spring Boot and MicroProfile sample applications.

Key changes:
- Implement FungibleTokenClient and NftClient for core HTS operations.
- Add Mirror Node repositories for Token and NFT data fetching.
- Resolve Windows-specific path bugs in test resource loading using toURI().
- Optimize Hedera network connectivity with multi-node failover and IP-based resolution.
- Add a missing JAX-RS provider to the MicroProfile sample.

Signed-off-by: Twiineenock <twiineenockfox@gmail.com>